# BD2_Proyecto1

./: .gitattributes  .gitignore  README.md  secuencial.cpp  seq_file.h
Estructuras/: AVLFile_Rot.h  BST_File.h
Estructuras/Extendible_Hashing/: CMakeLists.txt  HomeRecord_100.sh  HomeRecord_100k.sh  HomeRecord_10k.sh  HomeRecord_1k.sh  HomeRecord_600k.sh  ehash-HomesRecord.data  ehash-HomesRecord.index  ehash-TestRecord.data  ehash-TestRecord.index  extHash  main.cpp
Estructuras/Extendible_Hashing/dataset/: HomesData100kwith_command.csv  HomesData10kwith_command.csv  HomesData600kwith_command.csv
Estructuras/Extendible_Hashing/include/: Bucket.h  ExtendibleHash.h  Extendible_Hashing.h  IndexRecord.h
Estructuras/Extendible_Hashing/include/bucket/: Bucket.h  Register_Index.h
Estructuras/Extendible_Hashing/include/directory/: Directory.h  Single_Entry.h
Estructuras/Extendible_Hashing/results/Homes/: ehash.csv
Estructuras/Extendible_Hashing/results/Test/: ehash.csv
Estructuras/Extendible_Hashing/src/: CreditCardRecord.h  HomesRecord.h  RecordTest.h  homesRecord.h  main.cpp
Estructuras/Extendible_Hashing/test/: readData.cpp
Estructuras/Extendible_Hashing/utils/: libs.h  macros.h  preprocesamiento.py
Estructuras/Isam/: ISAM.h
Estructuras/Sequential_File/: seq_file_creditfraud.h  seq_file_homesales.h
Estructuras/Sequential_File/dataset/: HomesData100with_command.csv  HomesData1kwith_command.csv
